[project]
name = "abstract-api-mcp"
version = "0.1.0"
description = "Abstract API MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.5.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]
